objects/CMN_Foobar__c.object
<CustomObject>
    <description>Part of CMN Libary to demonstrate how the library functions
Should only be used as part of unit tests
See https://en.m.wikipedia.org/wiki/Foobar for more information about Foobar</description>
    <fields>
        <fullName>CMN_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMN_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMN_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CMN_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup</label>
        <referenceTo>CMN_Foobar__c</referenceTo>
        <relationshipLabel>Foobars</relationshipLabel>
        <relationshipName>CMN_Foobars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_NumberDecimal__c</fullName>
        <label>Number Decimal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_NumberInteger__c</fullName>
        <label>Number Integer</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMN_PicklistMultiSelect__c</fullName>
        <label>PicklistMultiSelect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
                <value>
                    <fullName>Five</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_TextAreaEncrypted__c</fullName>
        <label>TextAreaEncrypted</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CMN_TextAreaLong__c</fullName>
        <label>TextAreaLong</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMN_TextAreaRich__c</fullName>
        <label>TextAreaRich</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMN_TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMN_Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Foobar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foobars</pluralLabel>
    <recordTypes>
        <fullName>CMN_DefaultFoobar</fullName>
        <active>true</active>
        <description>Default Foobar record type</description>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>